fixes Bug 653281 - Need scrollbar in the tree directory

--- a/media/jetpack/css/UI.Sidebar.css
+++ b/media/jetpack/css/UI.Sidebar.css
@@ -219,6 +219,9 @@
 	}
 	
 .UI_Sidebar .trees-container {
-	overflow:auto;
+	overflow: auto;
+    -moz-box-flex: 1;
+    -moz-box-orient: vertical;
+    display: -moz-box;
 	
 }
